--- a/src/view/FormSecretario.form
+++ b/src/view/FormSecretario.form
@@ -596,6 +596,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Nome"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtNomeFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtNome.setDocument(new LimitText(50));"/>
                   </AuxValues>
@@ -686,6 +689,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Data de Nascimento"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtNascimentoFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MFormattedTextField" name="txtTelefone">
                   <Properties>
@@ -694,11 +700,17 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Telefone"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtTelefoneFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtNumero">
                   <Properties>
                     <Property name="label" type="java.lang.String" value="N&#xfa;mero"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtNumeroFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtNumero.setDocument(new LimitText(5));"/>
                   </AuxValues>
@@ -707,6 +719,9 @@
                   <Properties>
                     <Property name="label" type="java.lang.String" value="Cidade"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtCidadeFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtCidade.setDocument(new LimitText(50));"/>
                   </AuxValues>
@@ -715,6 +730,9 @@
                   <Properties>
                     <Property name="label" type="java.lang.String" value="Bairro"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtBairroFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtBairro.setDocument(new LimitText(50));"/>
                   </AuxValues>
@@ -723,6 +741,9 @@
                   <Properties>
                     <Property name="label" type="java.lang.String" value="Logradouro"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtRuaFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtRua.setDocument(new LimitText(50));"/>
                   </AuxValues>
@@ -731,6 +752,9 @@
                   <Properties>
                     <Property name="label" type="java.lang.String" value="Nome de usu&#xe1;rio"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtLoginFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtLogin.setDocument(new LimitText(10));"/>
                   </AuxValues>
@@ -742,6 +766,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Senha"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtSenhaFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtSenha.setDocument(new LimitText(10));"/>
                   </AuxValues>
@@ -753,6 +780,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Confirmar Senha"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtConfirmarFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtConfirmar.setDocument(new LimitText(10));"/>
                   </AuxValues>
@@ -764,6 +794,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="RG"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtRgFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MFormattedTextField" name="txtCpf">
                   <Properties>
@@ -772,11 +805,17 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="CPF"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtCpfFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MTextField" name="txtEmail">
                   <Properties>
                     <Property name="label" type="java.lang.String" value="E-mail"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtEmailFocusLost"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="txtEmail.setDocument(new LimitText(50));"/>
                   </AuxValues>
@@ -794,6 +833,9 @@
                         <StringItem index="3" value="Recursos Humanos"/>
                       </StringArray>
                     </Property>
+                    <Property name="accent" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="d4" green="bc" red="0" type="rgb"/>
+                    </Property>
                   </Properties>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MComboBox" name="compoTipo">
@@ -807,6 +849,9 @@
                         <StringItem index="1" value="Acesso Especial"/>
                       </StringArray>
                     </Property>
+                    <Property name="accent" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="d4" green="bc" red="0" type="rgb"/>
+                    </Property>
                   </Properties>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MFormattedTextField" name="txtEntrada">
@@ -816,6 +861,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Hor&#xe1;rio de entrada"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtEntradaFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MFormattedTextField" name="txtSaida">
                   <Properties>
@@ -824,14 +872,23 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Hor&#xe1;rio de sa&#xed;da"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtSaidaFocusLost"/>
+                  </Events>
                 </Component>
                 <Component class="com.hq.swingmaterialdesign.materialdesign.MFormattedTextField" name="txtSalario">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nunito" size="16" style="0"/>
+                    </Property>
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                       <Format format="#0.00" subtype="-1" type="0"/>
                     </Property>
                     <Property name="label" type="java.lang.String" value="Sal&#xe1;rio"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtSalarioFocusLost"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
